# patch

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
config/: __init__.py  repos.py
data/: manifest.json
scripts/: __init__.py  run_collect.py  run_merge.py  run_peek.py  run_process.py  run_push.py
src/patch/: __init__.py  cli.py  collect.py  filters.py  manifest.py  merge.py  peek.py  process.py  push.py  repos.py
