[project]
name = "patch-sft"
version = "0.1.2"
description = "GitHub issue-to-diff dataset pipeline for supervised fine-tuning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "aiofiles>=23.0",
    "datasets>=2.18",
    "huggingface-hub>=0.22",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "orjson>=3.9",
    "tenacity>=8.2",
    "pyarrow>=15.0",
]

[project.scripts]
patch-sft = "patch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patch"]
